Render doesn't look like Camera View #48526

Closed
opened 2016-05-26 23:37:40 +02:00 by A. CH. · 27 comments

System Information
S.O.: Ubuntu 14.04 64Bits
Graphic: Intel GMA HD Graphics 2000

Blender Version
version: 2.77 (sub 0), branch: master, commit date: 2016-04-05 18:12, hash: abf6f08, type: Release
Worked: (optional)

Short description of error
The render/preview (in camera view) doesn't have the proportion like 3D camera viw.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Open Blender.
  2. Change to Render Cycles
  3. Change to camer view (Numpad 0).
  4. go to Render Properties, and change to other dimention. (example: TV NTSC 16:9)
  5. in 3D view (Press Shif + Z) and see.

Note: Test with others dimentions.

Captura de pantalla de 2016-05-26 17:14:39.png

Captura de pantalla de 2016-05-26 17:15:14.png

Captura de pantalla de 2016-05-26 17:14:55.png

Captura de pantalla de 2016-05-26 17:15:05.png

It's normal?

I'm sorry for my bad english.

**System Information** S.O.: Ubuntu 14.04 64Bits Graphic: Intel GMA HD Graphics 2000 **Blender Version** version: 2.77 (sub 0), branch: master, commit date: 2016-04-05 18:12, hash: abf6f08, type: Release Worked: (optional) **Short description of error** The render/preview (in camera view) doesn't have the proportion like 3D camera viw. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Open Blender. 2. Change to Render Cycles 3. Change to camer view (Numpad 0). 4. go to Render Properties, and change to other dimention. (example: TV NTSC 16:9) 5. in 3D view (Press Shif + Z) and see. Note: Test with others dimentions. ![Captura de pantalla de 2016-05-26 17:14:39.png](https://archive.blender.org/developer/F314847/Captura_de_pantalla_de_2016-05-26_17_14_39.png) ![Captura de pantalla de 2016-05-26 17:15:14.png](https://archive.blender.org/developer/F314848/Captura_de_pantalla_de_2016-05-26_17_15_14.png) ![Captura de pantalla de 2016-05-26 17:14:55.png](https://archive.blender.org/developer/F314849/Captura_de_pantalla_de_2016-05-26_17_14_55.png) ![Captura de pantalla de 2016-05-26 17:15:05.png](https://archive.blender.org/developer/F314850/Captura_de_pantalla_de_2016-05-26_17_15_05.png) It's normal? I'm sorry for my bad english.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ACH2015

Added subscriber: @ACH2015
Member

Added subscriber: @eroMoD

Added subscriber: @eroMoD
Member

If you want the camera view to look like the render view, switch the viewport shading to "material".
https://www.blender.org/manual/editors/3dview/display/shading.html
3D Viewport Editor-->Header-->Viewport Shading-->Material

You can also view your world background color in your 3D viewport by enabling "world background" in:

3D Viewport Editor-->(n) properties shelf-->Display-->World background

https://www.blender.org/manual/modeling/meshes/introduction.html#Properties%20Shelf

Also, if you need help in the future, a good place to ask questions is here:
http://blender.stackexchange.com/

If you want the camera view to look like the render view, switch the viewport shading to "material". https://www.blender.org/manual/editors/3dview/display/shading.html 3D Viewport Editor-->Header-->Viewport Shading-->Material You can also view your world background color in your 3D viewport by enabling "world background" in: 3D Viewport Editor-->(n) properties shelf-->Display-->World background https://www.blender.org/manual/modeling/meshes/introduction.html#Properties%20Shelf Also, if you need help in the future, a good place to ask questions is here: http://blender.stackexchange.com/
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
eroMoD self-assigned this 2016-05-27 01:52:22 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

@eroMoD, please leave closing bug reports to developers.

I didn't check if there is a bug here, but this seems to be about aspect ratios, not shading.

@eroMoD, please leave closing bug reports to developers. I didn't check if there is a bug here, but this seems to be about aspect ratios, not shading.
eroMoD was unassigned by Brecht Van Lommel 2016-05-27 02:08:41 +02:00
Member

got it

got it
Author

Probalilly I do not explain me fine.
but the question it's about the proportion of the camera view that look different at the render,

Probablemente no me explique bien.
Pero, la pregunta es sobre porque el render luce diferente a la vista de la camara.

Captura de pantalla de 2016-05-26 20:32:34.png

Y me disculpa si mi ingles no es muy bueno.

Probalilly I do not explain me fine. but the question it's about the proportion of the camera view that look different at the render, Probablemente no me explique bien. Pero, la pregunta es sobre porque el render luce diferente a la vista de la camara. ![Captura de pantalla de 2016-05-26 20:32:34.png](https://archive.blender.org/developer/F314863/Captura_de_pantalla_de_2016-05-26_20_32_34.png) Y me disculpa si mi ingles no es muy bueno.
Member

oh, then maybe brecht was onto it.

If you look in the Properties Editor-->Render-->Dimensions
you can choose your aspect ratio, in your examples, you have different aspect ratios set there.

oh, then maybe brecht was onto it. If you look in the Properties Editor-->Render-->Dimensions you can choose your aspect ratio, in your examples, you have different aspect ratios set there.
Author

I think that when change the dimention of render it's should keep the proportions of 3D view.

Creo que cuando cambia la dimensión del render este debe mantener la proporción de la vista 3D.

Captura de pantalla de 2016-05-26 21:30:16.png

Captura de pantalla de 2016-05-26 21:30:59.png

Captura de pantalla de 2016-05-26 21:30:22.png

Captura de pantalla de 2016-05-26 21:31:22.png

Captura de pantalla de 2016-05-26 21:31:07.png

Captura de pantalla de 2016-05-26 21:31:35.png

Captura de pantalla de 2016-05-26 21:31:29.png

Captura de pantalla de 2016-05-26 21:31:15.png

Captura de pantalla de 2016-05-26 21:30:27.png

Captura de pantalla de 2016-05-26 21:30:32.png

Captura de pantalla de 2016-05-26 21:30:51.png

Captura de pantalla de 2016-05-26 21:30:44.png

I think that when change the dimention of render it's should keep the proportions of 3D view. Creo que cuando cambia la dimensión del render este debe mantener la proporción de la vista 3D. ![Captura de pantalla de 2016-05-26 21:30:16.png](https://archive.blender.org/developer/F314868/Captura_de_pantalla_de_2016-05-26_21_30_16.png) ![Captura de pantalla de 2016-05-26 21:30:59.png](https://archive.blender.org/developer/F314869/Captura_de_pantalla_de_2016-05-26_21_30_59.png) ![Captura de pantalla de 2016-05-26 21:30:22.png](https://archive.blender.org/developer/F314870/Captura_de_pantalla_de_2016-05-26_21_30_22.png) ![Captura de pantalla de 2016-05-26 21:31:22.png](https://archive.blender.org/developer/F314871/Captura_de_pantalla_de_2016-05-26_21_31_22.png) ![Captura de pantalla de 2016-05-26 21:31:07.png](https://archive.blender.org/developer/F314874/Captura_de_pantalla_de_2016-05-26_21_31_07.png) ![Captura de pantalla de 2016-05-26 21:31:35.png](https://archive.blender.org/developer/F314872/Captura_de_pantalla_de_2016-05-26_21_31_35.png) ![Captura de pantalla de 2016-05-26 21:31:29.png](https://archive.blender.org/developer/F314873/Captura_de_pantalla_de_2016-05-26_21_31_29.png) ![Captura de pantalla de 2016-05-26 21:31:15.png](https://archive.blender.org/developer/F314875/Captura_de_pantalla_de_2016-05-26_21_31_15.png) ![Captura de pantalla de 2016-05-26 21:30:27.png](https://archive.blender.org/developer/F314877/Captura_de_pantalla_de_2016-05-26_21_30_27.png) ![Captura de pantalla de 2016-05-26 21:30:32.png](https://archive.blender.org/developer/F314876/Captura_de_pantalla_de_2016-05-26_21_30_32.png) ![Captura de pantalla de 2016-05-26 21:30:51.png](https://archive.blender.org/developer/F314878/Captura_de_pantalla_de_2016-05-26_21_30_51.png) ![Captura de pantalla de 2016-05-26 21:30:44.png](https://archive.blender.org/developer/F314879/Captura_de_pantalla_de_2016-05-26_21_30_44.png)
Member

oh I see, are you using any nodes?

oh I see, are you using any nodes?
Author

No any! the created by defualt.

No any! the created by defualt.
Member

It looks like the only way it works is to leave the aspect ratio at 1 : 1
But change the resolution x and y

Untitled.png

It looks like the only way it works is to leave the aspect ratio at 1 : 1 But change the resolution x and y ![Untitled.png](https://archive.blender.org/developer/F314892/Untitled.png)

Added subscriber: @EjnerFergo

Added subscriber: @EjnerFergo

It's the aspect ratio. The formats you selected all expect a player/device that can convert the pixel aspect ratio to the correct display aspect ratio. If you render (F12) you can see how the output looks. I made an image that hopefully explains some things:

aspect_drawing.png

Here you have 'DVCPRO HD 1080p' (HD = 1920x1080) but the format resolution is 1280x1080. If you need to save your animation in any format with a pixel aspect other than 1:1 but with an intended HD output resolution, do your work with the default 'HDTV 1080p' preset (viewport framing, etc.) and only change preset when you have to render.

I don't think this is a bug, since the Cycles viewport rendering always is pixel aspect 1:1 (I guess) and the camera is the intended output resolution.

It's the aspect ratio. The formats you selected all expect a player/device that can convert the pixel aspect ratio to the correct display aspect ratio. If you render (F12) you can see how the output looks. I made an image that hopefully explains some things: ![aspect_drawing.png](https://archive.blender.org/developer/F314897/aspect_drawing.png) Here you have 'DVCPRO HD 1080p' (HD = 1920x1080) but the format resolution is 1280x1080. If you need to save your animation in any format with a pixel aspect other than 1:1 but with an intended HD output resolution, do your work with the default 'HDTV 1080p' preset (viewport framing, etc.) and only change preset when you have to render. I don't think this is a bug, since the Cycles viewport rendering always is pixel aspect 1:1 (I guess) and the camera is the intended output resolution.
Author

I mention because in the version 2.76b don't happened.

Lo menciono por que en la versión 2.76b no me sucedió.

Captura de pantalla de 2016-05-27 11:11:30.png

Captura de pantalla de 2016-05-27 11:11:36.png

Captura de pantalla de 2016-05-27 11:12:44.png

Captura de pantalla de 2016-05-27 11:12:32.png

Captura de pantalla de 2016-05-27 11:12:12.png

Captura de pantalla de 2016-05-27 11:12:21.png

Captura de pantalla de 2016-05-27 11:12:51.png

Captura de pantalla de 2016-05-27 11:11:41.png

Captura de pantalla de 2016-05-27 11:12:04.png

Captura de pantalla de 2016-05-27 11:11:48.png

Captura de pantalla de 2016-05-27 11:11:54.png

I mention because in the version 2.76b don't happened. Lo menciono por que en la versión 2.76b no me sucedió. ![Captura de pantalla de 2016-05-27 11:11:30.png](https://archive.blender.org/developer/F314962/Captura_de_pantalla_de_2016-05-27_11_11_30.png) ![Captura de pantalla de 2016-05-27 11:11:36.png](https://archive.blender.org/developer/F314961/Captura_de_pantalla_de_2016-05-27_11_11_36.png) ![Captura de pantalla de 2016-05-27 11:12:44.png](https://archive.blender.org/developer/F314964/Captura_de_pantalla_de_2016-05-27_11_12_44.png) ![Captura de pantalla de 2016-05-27 11:12:32.png](https://archive.blender.org/developer/F314966/Captura_de_pantalla_de_2016-05-27_11_12_32.png) ![Captura de pantalla de 2016-05-27 11:12:12.png](https://archive.blender.org/developer/F314965/Captura_de_pantalla_de_2016-05-27_11_12_12.png) ![Captura de pantalla de 2016-05-27 11:12:21.png](https://archive.blender.org/developer/F314968/Captura_de_pantalla_de_2016-05-27_11_12_21.png) ![Captura de pantalla de 2016-05-27 11:12:51.png](https://archive.blender.org/developer/F314973/Captura_de_pantalla_de_2016-05-27_11_12_51.png) ![Captura de pantalla de 2016-05-27 11:11:41.png](https://archive.blender.org/developer/F314974/Captura_de_pantalla_de_2016-05-27_11_11_41.png) ![Captura de pantalla de 2016-05-27 11:12:04.png](https://archive.blender.org/developer/F314976/Captura_de_pantalla_de_2016-05-27_11_12_04.png) ![Captura de pantalla de 2016-05-27 11:11:48.png](https://archive.blender.org/developer/F314972/Captura_de_pantalla_de_2016-05-27_11_11_48.png) ![Captura de pantalla de 2016-05-27 11:11:54.png](https://archive.blender.org/developer/F314978/Captura_de_pantalla_de_2016-05-27_11_11_54.png)
Author

probably it's not a bug, but perhaps it's about the setting value of Aspect ratio.

probably it's not a bug, but perhaps it's about the setting value of Aspect ratio.

This issue was referenced by 62f85add48

This issue was referenced by 62f85add486a83b696266012ec7115bbe30b3285

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

It was indeed a bug, used to work fine. Aspect ratio should have no influence in the viewport like that, fixed now.

It was indeed a bug, used to work fine. Aspect ratio should have no influence in the viewport like that, fixed now.

This issue was referenced by blender/cycles@bac94af1a7

This issue was referenced by blender/cycles@bac94af1a775ba5dfaeed928a9c3459c9998d48d

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Edit was going in merge in #73954 ('Render region' doesn't account for different aspect ratio) to this report, both are about aspect not working. However it looks like Cycles ignores aspect completely now.

So will keep the new report separate.

*Edit* was going in merge in #73954 ('Render region' doesn't account for different aspect ratio) to this report, both are about aspect not working. However it looks like Cycles ignores aspect completely now. So will keep the new report separate.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-18 03:33:52 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48526
No description provided.