Fix T48526: Cycles viewport render incorrectly influenced by pixel aspect ratio.

This reverts 72592cfb, needs more refactoring to do that cleanup.